feat: refactor schema
